--- a/views/page_1_2.html
+++ b/views/page_1_2.html
@@ -1,8 +1,3 @@
-<div class="jumbotron">
-    <h1>Page 1_2</h1>      
-    <p>Resolve ng-repeat issue</p>    
-</div>
-
 <div>
     <h1>Pagination Example</h1>
     <ul> 
@@ -11,30 +6,7 @@
 </div>
 
 <div>
-    <!--
-    <pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></pagination><br/>
-
-    <pagination boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination><br/>
-    
-    <pagination direction-links="false" boundary-links="true" total-items="totalItems" ng-model="currentPage"></pagination><br/>
-    <pagination direction-links="false" total-items="totalItems" ng-model="currentPage"></pagination><br/>
-    
-    
-    <pre>The selected page no: {{currentPage}}</pre>
-
-    <hr />
-    <h4>Pager</h4>
-    <pager total-items="totalItems" ng-model="currentPage"></pager>
-  
-
-    <hr />
-    <h4>Limit the maximum visible buttons</h4>
-    <pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination><br/>
-    -->
-    <pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true" rotate="false" num-pages="numPages"></pagination>
-
-    <!--<pre>Page: {{currentPage}} / {{numPages}}</pre>-->
-
+    <pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" class="pagination-sm" boundary-links="true"></pagination>
 </div>
 
 <div>
