--- a/partials/edit.html
+++ b/partials/edit.html
@@ -1,16 +1,12 @@
-<form name="editListForm">
-    <div class="form-group">
-        <div class="modal-header">
-            <h3 class="modal-title">Edit</h3>
-        </div>
-        <div class="modal-body">
-            <label for="title">Title:</label>
-            <input type="text" class="form-control" name="title" ng-model="item.text" autofocus required>
-            <div class="error"><span ng-show="editListForm.title.$error.required">Title is required.</span></div>
-        </div>
-        <div class="modal-footer">
-            <button type="submit" class="btn btn-primary" ng-click="ok()" ng-disabled="editListForm.title.$dirty && editListForm.title.$invalid">OK</button>
-            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-        </div>
-    </div>
-</form>
+<div class="modal-header">
+    <h3 class="modal-title">Edit</h3>
+</div>
+<div class="modal-body">
+    <label for="title">Title:</label>
+    <input type="text" class="form-control" name="title" ng-model="item.text" autofocus required>
+    <div class="error"><span ng-show="editListForm.title.$error.required">Title is required.</span></div>
+</div>
+<div class="modal-footer">
+    <button class="btn btn-primary" ng-click="ok()" ng-disabled="editListForm.title.$dirty && editListForm.title.$invalid">OK</button>
+    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+</div>
